# atlas-ai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
core/: main.cpp
core/data/memory/: facts.json
core/include/agent/: agentCore.h  decisionGate.h  executor.h  planner.h  prompts.h  reflector.h  types.h  worldState.h
core/include/autonomy/: autonomousSystem.h  autonomousTaskFactory.h  trigger.h  triggerManager.h
core/include/autonomy/triggers/: batteryTrigger.h  idleTrigger.h
core/include/llm/: llamaEngine.h  promptBuilder.h
core/include/memory/: conversationMemory.h  factMemory.h  goalMemory.h  memoryManager.h  memoryTypes.h  ragMemory.h  summaryMemory.h
core/include/scheduler/: taskScheduler.h
core/include/speech/: audioInput.h  piperTTS.h  playTTS.h  whisperSTT.h
core/include/tools/: openAppTool.h  openWebsiteTool.h  reminderTool.h  scheduledTask.h  shutdownTool.h  tool.h  toolManager.h  toolRegistry.h
core/include/utils/: timeUtils.h  utils.h
core/src/: main.cpp  utils.cpp
core/src/agent/: agentCore.cpp  decisionGate.cpp  executor.cpp  planner.cpp  reflector.cpp  worldState.cpp
core/src/autonomy/: autonomousSystem.cpp  autonomousTaskFactory.cpp  triggerManager.cpp
core/src/autonomy/triggers/: batteryTrigger.cpp  idleTrigger.cpp
core/src/llm/: llamaEngine.cpp  promptBuilder.cpp
core/src/memory/: conversationMemory.cpp  factMemory.cpp  goalMemory.cpp  memoryManager.cpp  ragMemory.cpp  summaryMemory.cpp
core/src/scheduler/: taskScheduler.cpp
core/src/speech/: audioInput.cpp  piperTTS.cpp  playTTS.cpp  whisperSTT.cpp
core/src/tools/: openAppTool.cpp  openWebsiteTool.cpp  reminderTool.cpp  shutdownTool.cpp  toolManager.cpp  toolRegistry.cpp
core/src/utils/: timeUtils.cpp  utils.cpp
